# Ascend-RAN

./: LICENSE  README.md
pybind_commit/LDPC_Decode/: LDPCDec_loopInKernel.cpp  ascendc_kernels_bbit  pybind11.cpp  run_pybind.sh  test_ldpc_pybind.py
pybind_commit/LDPC_Decode/cceprint/: matmul_custom_4_0_mix.cce
pybind_commit/LDPC_Decode/scripts/: Alist2De.py  checkMatrix.py  check_flipping.py  gen_data.py  gen_data_origin.py
pybind_commit/LDPC_Encoder/: LDPCEnc_custom_tiling.cpp  pybind11.cpp  test_ldpc_encode_1192.py
pybind_commit/LDPC_Encoder/cceprint/: matmul_custom_1_0_mix.cce  matmul_custom_2_0_mix.cce  matmul_custom_3_0_mix.cce  matmul_custom_5_0_mix.cce  matmul_custom_7_0_mix.cce  mod2_custom_0_0_mix.cce  mod2_custom_2_0_mix.cce  mod2_custom_7_0_mix.cce
pybind_commit/LS_Estimator/: ascendc_kernels_bbit  matmul_LS_custom.cpp  run_pybind.sh  test_matmul_pybind.py
pybind_commit/LS_Estimator/scripts/: check.py
pybind_commit/QamDemapper/: CMakeLists_kernel.txt  ascendc_kernels_bbit  pybind11.cpp  test_qam_demod.py
pybind_commit/QamDemapper/cceprint/: qam_demapper_2_0_mix.cce  qam_demapper_5_0_mix.cce  qam_demapper_6_0_mix.cce  qam_demapper_7_0_mix.cce  qam_demapper_8_0_mix.cce
pybind_commit/QamDemapper/scripts/: test_cpu.py
pybind_commit/ZFKernelInvocationNeo/: CMakeLists.txt  CMakeLists_kernel.txt  README.md  zf_equalization.cpp
pybind_commit/ZFKernelInvocationNeo/scripts/: cpu_benchmark.py  verify_result.py
pybind_commit/new_FFT/: testtime.py
pybind_commit/qam64_modulation_1192_220/: data_utils.h  pybind11.cpp  qam64_modulation.cpp  run_pybind.sh
pybind_commit/qam64_modulation_1192_220/scripts/: verify_result.py
wireless algorithm & operator/LDPC_Decode/: CMakeLists.txt  LDPCDec_tiling.cpp  README.md
wireless algorithm & operator/LDPC_Decode/cceprint/: matmul_custom_0_0_mix.cce  matmul_custom_1_0_mix.cce
wireless algorithm & operator/LDPC_Encoder/: CMakeLists.txt  CMakeLists_kernel.txt  LDPCEnc_custom.cpp  README.md  main.cpp  run_pybind.sh
wireless algorithm & operator/LDPC_Encoder/cceprint/: matmul_custom_0_0_mix.cce  matmul_custom_4_0_mix.cce  matmul_custom_6_0_mix.cce  matmul_custom_8_0_mix.cce  matmul_custom_9_0_mix.cce  mod2_custom_1_0_mix.cce  mod2_custom_3_0_mix.cce  mod2_custom_4_0_mix.cce  mod2_custom_5_0_mix.cce  mod2_custom_6_0_mix.cce
wireless algorithm & operator/LDPC_Encoder/modified_code/: matmul_custom_modified.cpp
wireless algorithm & operator/LDPC_Encoder/scripts/: gen_data.py  verify_result.py
wireless algorithm & operator/LS_Estimator/: CMakeLists.txt  README.md  matmul_custom_tiling.cpp  pybind11.cpp
wireless algorithm & operator/QamDemapper/: CMakeLists.txt  README.md  main.cpp  qamdemapper_custom.cpp  run_pybind.sh
wireless algorithm & operator/ZFKernelInvocationNeo/: main.cpp  pybind11.cpp  run_pybind.sh  zf_test.py
wireless algorithm & operator/qam64_modulation_1192_220/: CMakeLists.txt  README.md  ascendc_kernels_bbit  main.cpp  test_qam64_mod.py
yolo_decode_inference_show/: ReadMe.txt  merged_pipeline.py  thread.py
yolo_decode_inference_show/temp/: 1.h264  7.h264  8.h264
yolo_decode_inference_show/temp (copy 1)/: 0.h264  2.h264  3.h264  4.h264  5.h264  6.h264  9.h264
(+15 files in other folders)
